--- a/Data Analysis/Projects from 'Data Science Lovers'/Cars.ipynb
+++ b/Data Analysis/Projects from 'Data Science Lovers'/Cars.ipynb
@@ -13,7 +13,7 @@
    "id": "793b811e",
    "metadata": {},
    "source": [
-    "The dataset and questions are from: https://youtu.be/fhiUl7f5DnI"
+    "The questions are from: https://youtu.be/fhiUl7f5DnI"
    ]
   },
   {
