--- a/Data Analysis/Projects from 'Data Science Lovers'/Police.ipynb
+++ b/Data Analysis/Projects from 'Data Science Lovers'/Police.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "2626e499",
+   "id": "85601930",
    "metadata": {},
    "source": [
     "# Police Dataset"
@@ -10,16 +10,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "289f13ca",
+   "id": "0e55b323",
    "metadata": {},
    "source": [
-    "The dataset and questions are from: https://youtu.be/GyUbo45mVSE"
+    "The questions are from: https://youtu.be/GyUbo45mVSE"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "daadd512",
+   "id": "ea67e4b0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "896433cb",
+   "id": "05b8b545",
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d8a2bfc",
+   "id": "193a19a7",
    "metadata": {},
    "source": [
     "## Q. 1) For Data Cleaning - Remove the columns that only contains missing values."
@@ -362,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "44d6366d",
+   "id": "e518b399",
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "5012c44d",
+   "id": "7f8fc85a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "8a3db962",
+   "id": "5f745225",
    "metadata": {},
    "outputs": [
     {
@@ -715,7 +715,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9024bd74",
+   "id": "d39bd403",
    "metadata": {},
    "source": [
     "## Q. 2) Based on Filtering + Value Counts - For Speeding, were men or women stopped more often? "
@@ -723,7 +723,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec7954d9",
+   "id": "8171cba5",
    "metadata": {},
    "source": [
     "Men were stopped more often for speeding. Men had 25517 instances while women had 11686 instances for speeding."
@@ -732,7 +732,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "c3030974",
+   "id": "a6612188",
    "metadata": {},
    "outputs": [
     {
@@ -1028,7 +1028,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "6e7e294d",
+   "id": "499e0dc3",
    "metadata": {},
    "outputs": [
     {
@@ -1323,7 +1323,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "f67645e7",
+   "id": "ceb20466",
    "metadata": {},
    "outputs": [
     {
@@ -1346,7 +1346,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "370ec86b",
+   "id": "fba33ee5",
    "metadata": {},
    "source": [
     "## Q. 3) Does which gender gets searched more during a stop?"
@@ -1354,7 +1354,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8055572f",
+   "id": "d118f183",
    "metadata": {},
    "source": [
     "Males get searched more during a stop."
@@ -1363,7 +1363,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "40126318",
+   "id": "cab1fefe",
    "metadata": {},
    "outputs": [
     {
@@ -1673,7 +1673,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "1d3edd05",
+   "id": "3afbc02a",
    "metadata": {},
    "outputs": [
     {
@@ -1982,7 +1982,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "f8773f9d",
+   "id": "c4af9f16",
    "metadata": {},
    "outputs": [
     {
@@ -2014,7 +2014,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6a9a4fa",
+   "id": "0235f2d2",
    "metadata": {},
    "source": [
     "## Q. 4) Mapping + data-type casting - What is the mean for the stop_duration?"
@@ -2023,7 +2023,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "8d5bd0e1",
+   "id": "126ba369",
    "metadata": {},
    "outputs": [
     {
@@ -2056,7 +2056,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "d865dd3b",
+   "id": "1e91ec73",
    "metadata": {},
    "outputs": [
     {
@@ -2081,7 +2081,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "30b07f26",
+   "id": "ef43d4b0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2091,7 +2091,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "f1e2f372",
+   "id": "11774b8f",
    "metadata": {},
    "outputs": [
     {
@@ -2399,7 +2399,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "006abcab",
+   "id": "16b6d6ac",
    "metadata": {},
    "source": [
     "## Q. 5) Describe - Compare the age distributions for each violation."
@@ -2408,7 +2408,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "2813ec25",
+   "id": "09462e6f",
    "metadata": {},
    "outputs": [
     {
@@ -2441,7 +2441,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "70f352af",
+   "id": "a5291af7",
    "metadata": {},
    "outputs": [
     {
