--- a/Data Analysis/Projects from 'Data Science Lovers'/Weather.ipynb
+++ b/Data Analysis/Projects from 'Data Science Lovers'/Weather.ipynb
@@ -13,7 +13,7 @@
    "id": "818a4abb",
    "metadata": {},
    "source": [
-    "The dataset and questions are from https://www.youtube.com/watch?v=4hYOkHijtNw&t=2186s"
+    "The questions are from: https://www.youtube.com/watch?v=4hYOkHijtNw&t=2186s"
    ]
   },
   {
